# CompareXML

./: CHANGELOG.md  DOCS.md  README.md  pyproject.toml  requirements.txt  setup.py
comparexml/: __init__.py
